Opened 11 years ago

Closed 11 years ago

#3460 closed defect (fixed)

adpcm_ea_r3: "mismatch in coded sample count"

Reported by: ami_stuff Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: adpcm
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

I think that there must be some incorrect check, because this message happens with valid files.

g6bca574 - Oct 16 2011 - spam

gf884ef0 - Oct 13 2011 - ok

http://samples.mplayerhq.hu/game-formats/ea-vp6/NFSU2/THX_logo.vp6

C:\>ffmpeg -i THX_logo.vp6 out.wav
ffmpeg version N-61336-g11ed7ec Copyright (c) 2000-2014 the FFmpeg developers
  built on Mar 13 2014 02:24:33 with gcc 4.5.0 (GCC) 20100414 (Fedora MinGW 4.5.
0-1.fc14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-pthreads --enable-memalign-hack --enable-runtime-cpudetect --
enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -lw
inmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snapsh
ots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/sna
pshots/build/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3 --
enable-nonfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-li
bvorbis --enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-li
bopencore-amrwb --enable-libmp3lame --enable-libfreetype --enable-libvpx --disab
le-decoder=libvpx
  libavutil      52. 66.101 / 52. 66.101
  libavcodec     55. 52.102 / 55. 52.102
  libavformat    55. 34.101 / 55. 34.101
  libavdevice    55. 11.100 / 55. 11.100
  libavfilter     4.  3.100 /  4.  3.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 18.100 /  0. 18.100
  libpostproc    52.  3.100 / 52.  3.100
Guessed Channel Layout for  Input Stream #0.1 : stereo
Input #0, ea, from 'THX_logo.vp6':
  Duration: 00:00:06.00, start: 0.000000, bitrate: 451 kb/s
    Stream #0:0: Video: vp6, yuv420p, 512x256, 25 fps, 25 tbr, 25 tbn, 25 tbc
    Stream #0:1: Audio: adpcm_ea_r3, 32000 Hz, stereo, s16p, 256 kb/s
Output #0, wav, to 'out.wav':
  Metadata:
    ISFT            : Lavf55.34.101
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 32000 Hz, stereo, s16
, 1024 kb/s
Stream mapping:
  Stream #0:1 -> #0:0 (adpcm_ea_r3 -> pcm_s16le)
Press [q] to stop, [?] for help
[adpcm_ea_r3 @ 0x2316ca0] mismatch in coded sample count
    Last message repeated 124 times
THX_logo.vp6: Invalid data found when processing input
size=     625kB time=00:00:04.99 bitrate=1024.1kbits/s
video:0kB audio:625kB subtitle:0 data:0 global headers:0kB muxing overhead 0.012
501%

Change History (1)

comment:1 by Carl Eugen Hoyos, 11 years ago

Component: undeterminedavcodec
Keywords: adpcm added
Resolution: fixed
Status: newclosed
Version: unspecifiedgit-master

Fixed by Peter Ross in 73802014

Note: See TracTickets for help on using tickets.